...
    color: '颜色',
    strokeWidth: '粗细',
    fill: '填充',
    cancel: '取消',
    undo: '撤销',
    redo: '重做',
    done: '完成',
    back: '返回',
    smallScreenMoreTooltip: '更多',
  ),
  textEditor: I18nTextEditor(
    inputHintText: '输入标注或水印文字',
    bottomNavigationBarText: '文字',
    back: '返回',
    done: '完成',
    textAlign: '文字对齐',
    fontScale: '字号',
    backgroundMode: '文字背景',
    smallScreenMoreTooltip: '更多',
...
